# serde-evolve

./: Cargo.toml  README.md  deny.toml
.github/workflows/: CI.yml
examples/: fallible.rs  infallible.rs  transparent.rs
src/: lib.rs
tests/: advanced.rs  simple.rs  transparent.rs
versioned-macros/: Cargo.toml
versioned-macros/src/: emit.rs  lib.rs  parse.rs  validate.rs
