[workspace]
members = [".", "versioned-macros"]

[workspace.package]
edition = "2024"
version = "0.1.0"
repository = "https://github.com/danieleades/serde-evolve"
license = "MIT OR Apache-2.0"
categories = ["encoding", "data-structures"]
readme = "README.md"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"

[package]
name = "serde-evolve"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
description = "Type-safe data schema evolution with compile-time verified migrations"
documentation = "https://docs.rs/serde-evolve"
readme.workspace = true
keywords = ["versioning", "serialization", "migration", "schema", "evolution"]

[dependencies]
serde-evolve-macros = { version = "0.1.0", path = "versioned-macros" }

[dev-dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
