[package]
name = "serde-evolve-macros"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
description = "Procedural macros for the serde-evolve crate"
documentation = "https://docs.rs/serde-evolve-macros"
readme.workspace = true
keywords = ["versioning", "serialization", "migration", "schema", "macros"]

[lib]
proc-macro = true

[dependencies]
darling = "0.21"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[lints]
workspace = true
